# dwxmlcreator

./: README.md  com.github.alexkdeveloper.dwxmlcreator.json  meson.build  org.example.App.json
.github/workflows/: flatpak.yml
data/: com.github.alexkdeveloper.dwxmlcreator.appdata.xml.in  com.github.alexkdeveloper.dwxmlcreator.desktop.in  com.github.alexkdeveloper.dwxmlcreator.gschema.xml  meson.build  org.example.App.desktop.in  org.example.App.gschema.xml
data/icons/: meson.build
po/: LINGUAS  POTFILES  cs.po  it.po  meson.build  nl.po  ru.po  tr.po
src/: dwxmlcreator.gresource.xml  main.vala  meson.build  window.ui  window.vala
